force-app/main/default/objects/Currency_Engagement_Type__c/Currency_Engagement_Type__c.object-meta.xml
<CustomObject>
    <label>Currency &amp; Engagement Type</label>
    <nameField>
        <label>Currency/Engagement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency &amp; Engagement Type</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>