force-app/main/default/objects/Currency_Engagement_Type__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>