force-app/main/default/objects/Currency_Engagement_Type__c/fields/Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Profile_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile Type</label>
    <referenceTo>Rate_Card__c</referenceTo>
    <relationshipLabel>Currency &amp; Engagement Type</relationshipLabel>
    <relationshipName>Currency_Engagement_Type</relationshipName>
    <type>Lookup</type>
</CustomField>